added register and error processing

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,13 +1,13 @@
 .background-dark-3 {
-    background-color: #292D31 !important;
+    background-color: #292D31;
 }
 
 .background-dark-1 {
-    background-color: #171A1C !important;
+    background-color: #171A1C;
 }
 
 .background-dark-2 {
-    background-color: #1E2225 !important;
+    background-color: #1E2225;
 }
 
 .border-gray-1 {
