--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,10 @@
+.points {
+    width: auto;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .background-dark-3 {
     background-color: #292D31;
 }
@@ -23,6 +30,13 @@
     padding-right: 50px;
 }
 
+.main-p-start {
+    padding-left: 50px;
+}
+.main-p-end {
+    padding-right: 50px;
+}
+
 .noto-sans {
     font-family: Noto-Sans !important;
     font-weight: 500;
@@ -45,6 +59,10 @@ a:hover {
     font-size: 24px;
 }
 
+.fs-14 {
+    font-size: 14px;
+}
+
 .text-align-justify {
     text-align: justify;
 }
@@ -64,6 +82,14 @@ a:hover {
         padding-left: 20px;
         padding-right: 20px;
     }
+
+    .main-p-start {
+        padding-left: 20px;
+    }
+    .main-p-end {
+        padding-right: 20px;
+    }
+
     .fs-48 {
         font-size: calc(40px + 8 * ((100vw - 320px) / (768 - 320)));
     }
