--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,17 @@
+.points-6 {
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.points-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 .points-2 {
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -140,6 +154,10 @@ a:hover {
     background-color: #0d6efd;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
 .main-grid {
     display: grid;
     grid-template-rows: 60px 1fr;
@@ -183,14 +201,14 @@ a:hover {
     }
 }
 
-@media(max-width: 1120px) {
+@media(max-width: 1170px) {
     .mw-500-768 {
-        max-width: 717px;
+        max-width: 767px;
     }
 }
 
-@media(min-width: 1120px) {
+@media(min-width: 1170px) {
     .mw-500-768 {
-        max-width: 352px;
+        max-width: 375px;
     }
 }
