--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -45,6 +45,10 @@ html {
   height: 90px;
 }
 
+.breadcrumb > a.active {
+  color: #6c757d !important;
+}
+
 .mw-900 {
   display: flex;
   flex-direction: column;
@@ -68,6 +72,10 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.my-hover:hover {
+  background-color: #323539 !important;
 }
 
 .mw-768 {
@@ -96,6 +104,10 @@ html {
 
 .background-dark-2 {
   background-color: #1e2225;
+}
+
+.background-gray-1 {
+  background-color: #61615d;
 }
 
 .border-gray-1 {
@@ -135,8 +147,8 @@ html {
   background-color: #0d6efd;
 }
 
-.noto-sans {
-  font-family: Noto-Sans !important;
+.roboto {
+  font-family: Source Sans Pro !important;
   font-weight: 500;
 }
 
@@ -169,8 +181,8 @@ a:hover {
   font-size: 14px;
 }
 
-.fs-14 {
-  font-size: 14px;
+.fs-16 {
+  font-size: 16px;
 }
 
 .fs-18 {
