--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -90,7 +90,21 @@ textarea:focus {
 }
 
 .my-hover:hover {
-  background-color: #323539 !important;
+  background-color: rgb(50, 53, 57) !important;
+}
+
+.my-hover-tr:hover {
+  background-color: rgba(50, 53, 57, .3) !important;
+}
+
+.danger-hover:hover {
+  background-color: #dc3545 !important;
+  color: #f8f9fa !important;
+}
+
+.primary-hover:hover {
+  background-color: #0d6efd !important;
+  color: #f8f9fa !important;
 }
 
 .mw-768 {
@@ -103,6 +117,10 @@ textarea:focus {
 .mw-768 > div {
   max-width: 768px;
   width: 100%;
+}
+
+.form-control:disabled {
+  background-color: #171a1c !important; 
 }
 
 .text-gray-1 {
@@ -255,6 +273,21 @@ a:hover {
   }
 }
 
+@media (max-width: 576px) {
+  .main-px {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .main-p-start {
+    padding-left: 12px;
+  }
+
+  .main-p-end {
+    padding-right: 12px;
+  }
+}
+
 @media (max-width: 768px) {
   .welcome {
     margin-top: calc(75px + 25 * ((100vw - 320px) / (768 - 320)));
@@ -302,7 +335,7 @@ a:hover {
   overflow: hidden;
   width: 100%;
   height: 2px;
-  background-color: #171a1c;
+  background-color: #292d31;
   position: relative;
 }
 
@@ -312,7 +345,7 @@ a:hover {
   transform: translateX(-100%);
   height: 100%;
   width: 30%;
-  background-color: #fafafa;
+  background-color: #292d31;
   animation: anim1 3s cubic-bezier(0.49, 0.7, 0.7, 0.35) infinite, anim2 2s ease-in-out infinite;
 }
 .linear-loader div:nth-child(2) {
@@ -322,13 +355,13 @@ a:hover {
   position: absolute;
   height: 100%;
   width: 30%;
-  background-color: #fafafa;
+  background-color: #292d31;
   animation: anim1 3s cubic-bezier(0.49, 0.7, 0.7, 0.35) infinite, anim2 3.5s ease-in-out infinite;
   animation-delay: 1.5s;
 }
 
 .linear-loader.blue {
-  background-color: #171a1c
+  background-color: #292d31
 }
 
 .linear-loader.blue div:nth-child(1) {
@@ -431,6 +464,19 @@ pre[class*="language-"].line-numbers > code {
 
 }
 
+input:checked {
+  border: none;
+}
+
+.text-primary-tr {
+  color: rgba(13, 110, 253, .3);
+}
+
+.primary-tr-hover:hover {
+  background-color: rgba(13, 110, 253, .3);
+  color: rgba(255, 255, 240, 0.3);
+}
+
 .line-numbers-rows > span {
   display: block;
   counter-increment: linenumber;
@@ -444,3 +490,18 @@ pre[class*="language-"].line-numbers > code {
   text-align: right;
 }
 
+.border-dashed {
+  border: 1px dashed #0d6efd !important;
+}
+
+.dz-progress, .dz-error-message, .dz-success-message, .dz-error-mark, .dz-success-mark, .dz-image {
+  display: none;
+}
+
+.dropzone-items > div:first-child {
+  display: none !important;
+}
+
+.dropzone-items > div:nth-child(2) {
+  margin-top: 16px;
+}
